# llm_search_agent

./: .coverage  README.md  pyproject.toml  quick_start.py
data/: conversations.db
engine/: config.py  requirements.txt
engine/core/: conversation_manager.py  events.py  fallback_search.py  query_parser.py  result_evaluator.py  tool_orchestrator.py  workflow_coordinator.py
engine/indexer/: document_loader.py  document_store.py
engine/knowledge_base/: __init__.py
engine/knowledge_base/docs/: 灵碳智能介绍.docx  财务数据概览（美元）.md
engine/knowledge_base/indexes/: document_index.json
engine/knowledge_base/indexes/chroma_db/: chroma.sqlite3
engine/search/: engine.py
engine/utils/: cost_tracker.py  custom_llm.py
engine/web/: apiconfig.py
knowledge_base/indexes/chroma_db/: chroma.sqlite3
tests/core/: conftest.py  test_answer_generator.py  test_bing_search.py  test_conversation_manager.py  test_embedding.py  test_evaluator.py  test_knowledge_base.py  test_qa_system.py  test_query_parser.py  test_result_evaluator.py  test_tool_orchestrator.py  test_workflow_coordinator.py
