[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-search"
version = "0.1.0"
description = "LLM Search Project"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["/Users/bojieli/pyproject/llm-search/tests/core"]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.hatch.build]
include = [
    "engine/**/*.py",
]